  * finagle-core: `c.t.f.builder.Server` now implements `c.t.f.ListeningServer`.
  * finagle-core: `c.t.f.Server.serveAndAnnounce` with a `ServiceFactory` had
    its first argument renamed to `name` from `forum`.
  * finagle-core: Add an attribute map to `c.t.f.Addr.Bound`.
  * finagle-core: `c.t.f.builder.ClientConfig.FailFast` has moved to
    `c.t.f.FailFastFactory.FailFast`.
  * finagle-memcached / finagle-memcachedx: move TwitterCacheResolver
    and related objects to new finagle-cacheresolver package.
  * finagle-mux: `c.t.f.mux.RequestNackedException` is removed in favor of a standard
    Failure (`c.t.f.Failure.Rejected`).

Runtime Behavior Changes
~~~~~~~~~~~~~~~~~~~~~~~~

  * finagle-core: `com.twitter.finagle.service.StatsFilter` no longer requires a
    `com.twitter.finagle.stats.RollupStatsReceiver` for correct behaviour, and 
    providing one will double count failures. 

Deprecations
~~~~~~~~~~~~

  * finagle-core: `c.t.f.builder.Server.localAddress` is deprecated in favor of
    `c.t.f.ListeningServer.boundAddress`.

New Features
~~~~~~~~~~~~

  * finagle-core: `Fail fast <https://twitter.github.io/finagle/guide/FAQ.html#why-do-clients-see-com-twitter-finagle-failedfastexception-s>`_
    is now `configurable <https://twitter.github.io/finagle/guide/FAQ.html#configuring-finagle6>`_
    on Stack-based clients via the `com.twitter.finagle.FailFastFactory.FailFast` param.

  * finagle-core: `com.twitter.finagle.service.StatsFilter` is now configurable with an 
    `com.twitter.finagle.stats.ExceptionStatsHandler` to customize how failures are recorded.

  * finagle-core: improved Java compatiblity for `c.t.f.Stack.Params` / `c.t.f.Stack.Parameterized`.

  * finagle-mysql: Add support for MySQL transactions.

  * finagle-stats: A new HostStatsReceiver type is added and used for per host stats.
    It is loaded through LoadService and used by the Stack-based API as a default 